- Fixed spacing
- Added all templates (carousel yet to be implemented)

- Added all individuals

--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@
   box-sizing: border-box;
 }
 
-/* Scrollbar */
-::-webkit-scrollbar {
-  display: none;
-}
 
 body {
   background-color: var(--bg);
@@ -149,7 +145,6 @@ ul {
 
   margin-left: 3em;
   margin-bottom: 3em;
-  width: 100%;
   background: var(--navy);
   position: fixed;
   bottom: 0;
